--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                <nav class="main-header__navigation">
                    <ul data-da=".nav, 800, 0" class="header__navigation-list">
                        
-                       <li class="dropli_link"><div class="header__navigation-link navigation-link__dropli _active">Satış<svg class="icon icon_arrow_next"><use xlink:href="symbol-defs.svg#icon-arrow_down"></use></svg></div>
+                       <li class="dropli_link"><div class="header__navigation-link navigation-link__dropli">Satış<svg class="icon icon_arrow_next"><use xlink:href="symbol-defs.svg#icon-arrow_down"></use></svg></div>
                        
                        <ul class="sub__navigation-list">
                          <li><div class="sub__navigation-link navigation-link__back"><span class="menu__arrow_back"><svg class="icon icon_arrow_back"><use xlink:href="symbol-defs.svg#icon-arrow_right13"></use></svg></span><span>Satış</span></div></li>
