--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
        <div class="avtovitrin_elan_ver_link">
         <div class="avtovitrin_elan_ver_item">
            <div class="avtovitrin_elan_ver_item_main">
-            <h1 class="avtovitrin_h1_title">Yeni və İşlənmiş Avtomobil elanları 2023 - Azərbaycanın Maşın bazarı qiymətlər</h1>
+            <h1 class="avtovitrin_h1_title">Yeni və İşlənmiş Avtomobil elanları 2023. Azərbaycanın Maşın bazarı - qiymətlər</h1>
             </div>
         </div>
         </div>
