--- a/car_about.html
+++ b/car_about.html
@@ -633,9 +633,9 @@
        </tr>
        <tr>
            <td class="row_phone_icon">
-           <a class="contacts__link-estate" href="https://wa.me/994702771920" target="_blank"><svg class="icon icon-whatsapp"><use xlink:href="symbol-defs.svg#icon-whatsapp"></use></svg>
+           <a class="contacts__link-estate" href="https://wa.me/994702771920" target="_blank"><svg class="icon car_about_user_phone"><use xlink:href="symbol-defs.svg#icon-whatsapp1"></use></svg>
                   </a>
-                  <a class="contacts__link-estate" href="tel:+994702771920"><svg class="icon icon-phone"><use xlink:href="symbol-defs.svg#icon-phone"></use></svg></a>
+                  <a class="contacts__link-estate" href="tel:+994702771920"><svg class="icon car_about_user_phone"><use xlink:href="symbol-defs.svg#icon-phone"></use></svg></a>
            </td>
            <td class="row_phone_number"><a class="contacts__link-user" href="tel:+994702771920">(055) 555-19-20<span class="show_number">[nömrəni göstər]</span></a></td>
 
@@ -660,20 +660,20 @@
        </tr>
        <tr>
            <td class="row_make_first">3 AZN</td>
-           <td class="row_make_first_text"><svg class="icon premium__icon_user"><use xlink:href="elitev_full.svg#icon-up-arrow"></use></svg>
+           <td class="row_make_first_text"><svg class="icon premium__icon_user"><use xlink:href="symbol-defs.svg#icon-up-arrow"></use></svg>
                  Elanı irəli çək</td>
 
        </tr>
 
         <tr>
            <td class="row_make_premium">5 AZN</td>
-           <td class="row_make_premium_text"><svg class="icon premium__icon_user1"><use xlink:href="elit_ev.svg#icon-diamond-2"></use></svg> Elanı Elit et</td>
+           <td class="row_make_premium_text"><svg class="icon premium__icon_user1"><use xlink:href="symbol-defs.svg#icon-diamond1"></use></svg> Elanı Elit et</td>
 
        </tr>
 
        <tr>
            <td class="row_make_vip">15 AZN</td>
-           <td class="row_make_vip_text"><svg class="icon vip__icon_user"><use xlink:href="elit_ev.svg#icon-vip4"></use></svg> Elanı VİP et</td>
+           <td class="row_make_vip_text"><svg class="icon vip__icon_user"><use xlink:href="symbol-defs.svg#icon-vip4"></use></svg> Elanı VİP et</td>
 
        </tr>
 
