about upd close

--- a/car_about.html
+++ b/car_about.html
@@ -478,6 +478,8 @@
 
 <!-- Report section start -->
 <div class="ads_report_items" data-tab-content id="tab-1">
+            <div class="ads_delate_title">Elandan şikayət etmək
+               <span class="ads_title_close">+</span></div>
              <div class="ads_report_items-body">
               <div class="ads_report_item">
                <input type="radio" name="ads_report" id="wrong_number">
@@ -508,7 +510,10 @@
            </div>
 
            <div class="ads_delate_items" data-tab-content id="tab-3">
-               <div class="ads_delate_title">Elanı silmək</div>
+               <div class="ads_delate_title">Elanı silmək
+               <span class="ads_title_close">+</span>
+               </div>
+               
                <div class="ads_delate_text">Zəhmət olmasa, elanın silinməsini təsdiqləmək üçün Şifrəni daxil edin. Şifrəni, elanınız saytda dərc olunan zaman avtovitrin.com-dan Sizə göndərilən məktubda tapa bilərsiniz.</div>
                <div class="ads_delate_input_part">
                <form action="" method="get">
@@ -520,7 +525,8 @@
            </div>
 
            <div class="ads_edit_items" data-tab-content id="tab-2">
-               <div class="ads_delate_title">Elana Düzəliş etmək</div>
+               <div class="ads_delate_title">Elana Düzəliş etmək
+               <span class="ads_title_close">+</span></div>
                <div class="ads_delate_text">Zəhmət olmasa, elanınıza düzəliş etmək üçün Şifrəni daxil edin. Şifrəni, elanınız saytda dərc olunan zaman avtovitrin.com-dan Sizə göndərilən məktubda tapa bilərsiniz.</div>
                <div class="ads_delate_input_part">
                <form action="" method="get">
@@ -534,6 +540,8 @@
 
 <!-- Estae share section start -->
 <div class="estate__share" data-tab-content id="tab-4">
+  <div class="ads_delate_title">Elanı paylaş
+               <span class="ads_title_close">+</span></div>
    <div class="estate__share_row">
       <div class="estate__share_item">
          <a class="car_about_share_link" href="" target="_blank">
