--- a/car_about_salon.html
+++ b/car_about_salon.html
@@ -654,11 +654,13 @@
  
         
 <!-- Car dealler table start                      -->
-      <div data-da=".estate_mobile1, 750, 5" class="car_dealer_table">
+      <div data-da=".estate_mobile1, 750, 5" class="car_dealer_table ">
          <div class="dealer_table-body">
             <div class="dealer_table-logo_name">
                <div class="dealer_table-logo">
+                 <div class="dealer_table-logo_img">
                   <img src="img/dealers_logo/Bmw_sayt.svg" alt="">
+               </div>
                </div>
                <h3 class="dealer_table-name">BMW Azerbaijan</h3>
                
