--- a/car_dealer_about.html
+++ b/car_dealer_about.html
@@ -131,9 +131,11 @@
          <div class="agency__banner_logo">
             <img src="img/dealers_logo/Alfa-Romeo_logo_sayt.svg" alt="">
          </div>
-         <div class="agency__banner_name">
-            Rüfət & Aynur  Rüfət & Aynur Rüfət & Aynur
+         <div class="agency__banner_about">
+         <h1 class="agency__banner_name">Autolux Azerbaijan Land Rover</h1>
+         <p class="agency__banner_type">(Rəsmi Nümayəndə)</p>
          </div>
+         
          </div>   
        </div>
 </div>
@@ -224,6 +226,14 @@
    </div>
 </div>
 <!-- Agency info tabs section End -->
+  
+<!--Agency about short start  -->
+<div class="dealer_about_short _container">
+<p class="dealer_about_short_text"> <span class="dealer_about_short_name">Autolux Azerbaijan Land Rover - </span>
+         Land Rover avtomobillərinin Azərbaycanda rəsmi düstribüteri Avtolüks Azərbaycan MMC-dir. Avtomobillərə 3 il və ya 100000 km rəsmi istehalçı zəmanəti verilir.. <a href="#" class="dealer_about_more">Ətfaflı oxu</a>
+         </p>
+         </div>
+<!--Agency about short end  -->
 
   <!--Sections Headers  Start -->
 <div class="section_header">
