--- a/car_dealer_about.html
+++ b/car_dealer_about.html
@@ -437,7 +437,7 @@
    <!-- Agency report section Start -->
   <div class="agency__report" data-tab-content id="tab-1">
              <div class="agency__report-container _container">
-             <div class="ads_delate_title">Elandan şikayət etmək
+             <div class="ads_delate_title">Avtosalondan şikayət etmək
                <span class="ads_title_close">+</span></div>
              <div class="agency__report_row">
              
@@ -462,6 +462,7 @@
                </div>
                
             </div>
+            <button type="submit" class="ads_report_btn">Göndər</button>
             </div>
            </div>
             <!-- Agency report section End -->
